--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "@material-ui/styles": "^4.9.0",
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.0.0-rc.5",
+    "@typeform/embed": "^0.34.1",
     "aos": "^2.3.4",
     "classnames": "^2.2.6",
     "gatsby": "^2.20.36",
     "gatsby-image": "^2.4.0",
     "gatsby-mdx": "^1.0.0",
-    "gatsby-plugin-manifest": "^2.3.6",
     "gatsby-plugin-mdx": "^1.1.10",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.3.0",
